--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:rich="http://richfaces.org/rich"
-	xmlns:jsfcc="http://jsfrf.cc">
+	xmlns:jsfcc="http://jsfrfcc.com">
 <h:head>
 	<title>自定义组件Shuttle演示</title>
 </h:head>
