--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -16,7 +16,8 @@
 		<h:outputText value="旋转角度：" />
 		<h:inputText value="#{test.rotate}" />
 		<br />
-		<jsfcc:watermark id="myImgText" image="#{jsfrfEnv.imagePath}#{test.image}" text="#{test.text}" rotate="#{test.rotate}" position="right_bottom" />
+		<jsfcc:watermark id="myImgText" image="#{jsfrfEnv.imagePath}#{test.image}" 
+		text="#{test.text}" rotate="#{test.rotate}" position="right_bottom" switching="#{test.switching}"/>
 		<br />
 		<h:commandButton value="测试" />
 	</h:form>
