--- a/src/main/webapp/test2.xhtml
+++ b/src/main/webapp/test2.xhtml
@@ -4,15 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:rich="http://richfaces.org/rich"
 	xmlns:jsfcc="http://jsfrfcc.com">
 <h:head>
-	<title>自定义组件Shuttle演示</title>
-	<style>
-	body {
-		margin-left: 33px;
-		margin-top: 33px;
-		background-color: #F5F5F5;
-		cursor: pointer;
-	}
-	</style>
+	<title>自定义组件watermark演示</title>
 	<h:outputScript library="javascript" name="jsf.js" target="head" />
 </h:head>
 
