cdk--first successful step

--- a/src/main/webapp/test2.xhtml
+++ b/src/main/webapp/test2.xhtml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:rich="http://richfaces.org/rich"
-	xmlns:jsfcc="http://jsfrfcc.com">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:rich="http://richfaces.org/rich" xmlns:jsfcc="http://jsfrfcc.com">
 <h:head>
 	<title>自定义组件watermark演示</title>
 	<h:outputScript library="javascript" name="jsf.js" target="head" />
@@ -17,9 +16,8 @@
 		<h:outputText value="旋转角度：" />
 		<h:inputText value="#{test.rotate}" />
 		<br />
-		<jsfcc:watermark id="myImgText" image="#{jsfrfEnv.imagePath}#{test.image}" 
-		text="#{test.text}" rotate="#{test.rotate}" position="right_bottom" switching="#{test.switching}"
-		width="50%" height="50%"/>
+		<jsfcc:watermark id="myImgText" image="#{jsfrfEnv.imagePath}#{test.image}" text="#{test.text}" rotate="#{test.rotate}"
+			position="right_bottom" switching="#{test.switching}" width="50%" height="50%" />
 	</h:form>
 </h:body>
 </html>
