--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -8,6 +8,7 @@
 	<h:panelGrid>
 		<h:link value="4.1.1 composite component" outcome="test1" />
 		<h:link value="4.1.2 customer component" outcome="test2" />
+		<h:link value="6. cdk" outcome="test3" />
 	</h:panelGrid>
 </h:body>
 </html>
