--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -1,13 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j">
 <h:head>
-	<title>jsfrfcc</title>
+	<h:outputStylesheet name="jsfrf.css" library="css" />
+	<title>JSF2和Richfaces4使用指南 jsfrfcc</title>
 </h:head>
 
 <h:body>
-	<h:panelGrid>
+	<h:panelGrid styleClass="jsfrfPanel">
+		<h:link value="customer component 样例" outcome="customer_component" />
 		<h:link value="4.1.1 composite component" outcome="test1" />
-		<h:link value="4.1.2 customer component" outcome="test2" />
 		<h:link value="6. cdk" outcome="test3" />
 	</h:panelGrid>
 </h:body>
