--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
 <h:head>
 	<h:outputStylesheet name="jsfrf.css" library="css" />
 	<title>JSF2和Richfaces4使用指南 jsfrfcc</title>
@@ -9,8 +9,8 @@
 <h:body>
 	<h:panelGrid styleClass="jsfrfPanel">
 		<h:link value="customer component 样例" outcome="customer_component" />
-		<h:link value="4.1.1 composite component" outcome="test1" />
-		<h:link value="6. cdk" outcome="test3" />
+		<h:link value="composite component 样例" outcome="composite_component" />
+		<h:link value="component development kit 样例" outcome="cdk" />
 	</h:panelGrid>
 </h:body>
 </html>
