--- a/src/main/webapp/cdk.xhtml
+++ b/src/main/webapp/cdk.xhtml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:k="http://jsfrfcc.com/cdk">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets" 
+	xmlns:k="http://jsfrfcc.com/cdk">
 <h:head>
 	<title>自定义CDK组件演示</title>
 </h:head>
 
 <body>
 	<h:form>
-		<k:input id="in1" value="#{flash.value}" />
-		<h:outputText value="#{flash.value}" />
-		<h:commandButton value="Submit" />
+		<k:avatar
+			id="myImgText" 
+			image="#{jsfrfEnv.imagePath}#{test.image}"
+			text="测试头像" 
+			switching="#{test.switching}" 
+			width="50%" 
+			height="50%"/>
 	</h:form>
 </body>
 </html>
