--- a/src/main/webapp/cdk.xhtml
+++ b/src/main/webapp/cdk.xhtml
@@ -3,17 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets" 
-	xmlns:k="http://jsfrfcc.com/cdk">
+	xmlns:rk="http://jsfrfcc.com/cdk">
 <h:head>
 	<title>自定义CDK组件演示</title>
 </h:head>
 
 <body>
 	<h:form>
-		<k:avatar
+		<rk:picta
 			id="myImgText" 
 			image="#{jsfrfEnv.imagePath}#{test.image}"
-			text="测试头像" 
+			text="测试图画" 
 			switching="#{test.switching}" 
 			width="50%" 
 			height="50%"/>
