--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -8,7 +8,7 @@
 
 <h:body>
 	<h:panelGrid styleClass="jsfrfPanel">
-		<h:link value="customer component 样例" outcome="customer_component" />
+		<h:link value="custom component 样例" outcome="custom_component" />
 		<h:link value="composite component 样例" outcome="composite_component" />
 		<h:link value="component development kit 样例" outcome="cdk" />
 	</h:panelGrid>
