--- a/src/main/webapp/cdk.xhtml
+++ b/src/main/webapp/cdk.xhtml
@@ -5,7 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets" 
 	xmlns:rk="http://jsfrfcc.com/cdk">
 <h:head>
-	<title>自定义CDK组件演示</title>
+	<title>CDK 自定义组件 picta 演示</title>
 </h:head>
 
 <body>
