--- a/src/main/webapp/custom_component.xhtml
+++ b/src/main/webapp/custom_component.xhtml
@@ -4,7 +4,7 @@
 	xmlns:rich="http://richfaces.org/rich" xmlns:jsfcc="http://jsfrfcc.com">
 <h:head>
 	<title>customer component 自定义组件 watermark 演示</title>
-	<h:outputScript library="javascript" name="jsf.js" target="head" />
+	<h:outputScript library="javax.faces" name="jsf.js"/>
 </h:head>
 
 <h:body>
